src/test/deca/syntax/invalid/AvecObjet/ExtendsSansSuperClass.deca
//Description
//  class extends sans superclasse
//
//Réponse
//  Erreur syntaxique ligne 8
//  missing IDENT at '{'

class TestInvalide extends {
}